--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
-    "eslint": "^8.32.0",
     "express": "^4.18.2",
     "sequelize": "^6.3.4",
     "sqlite3": "^5.1.4"
@@ -15,6 +14,11 @@
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
+    "eslint": "^8.32.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.20"
   },
   "engines": {
