--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,9 @@
         "ecmaVersion": "latest"
     },
     "rules": {
+        "quotes": ["error", "double"],
+        "semi": ["off", "always"],
+        "comma-dangle": 0,
+        "space-before-function-paren": 0
     }
 }
