--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "scripts": {
     "start": "nodemon ./src/server.js",
     "seed": "node ./scripts/seedDb.js",
-    "lint": "npx eslint ./src/* ./scripts/*"
+    "lint": "npx eslint ./src/* ./scripts/*",
+    "test": "Node_ENV=test npx jest"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
     "eslint": "^8.32.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "nodemon": "^2.0.20"
+    "faker": "^5.5.3",
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=10.16.3"
